# opensn

./: .buildinfo  .clang-format  .clang-tidy  .editorconfig  .flake8  .gitattributes  .gitignore  .licenserc.json  .mailmap  .stylua.toml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  coding_standard.html  configure.sh  gallery.html  genindex.html  getting_started.html  index.html  install_linux.html  install_linux_easy.html  install_macos.html  install_macos_easy.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  start_developer_tutorials.html  start_install.html  start_source_code_doc.html  start_user_tutorials.html  workflow.html
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  YReGenerateDocumentation.sh  coding_standard.md  conf.py.in  gallery.md  getting_started.rst  index.rst  install_linux.md  install_linux_easy.md  install_macos.md  install_macos_easy.md  requirements.txt  start_install.md  start_source_code_doc.md  start_user_tutorials.md
doc/PAGES/MeshTutorials/: MeshTutorial_01_1DMesh.h  MeshTutorial_02_2DOrthoMesh.h  MeshTutorial_03_3DOrthoMesh.h  MeshTutorial_04_Predef2d.h  MeshTutorial_07_3DExtrudedMesh.h
doc/PAGES/ProgrammersManual/: devman_01_02_usinglib.h  devman_01_03_codingconv.h  devman_01_04_globalvars.h  devman_01_05_addinglua.h  devman_01_06_StaticRegistration.h  devman_01_07_TestSystem.h
doc/PAGES/Tutorials/: Tutorial_01_DiffusionSim.h  Tutorial_02_Output.h  Tutorial_03_TransportSim.h
doc/_templates/: function.rst  python.rst
doc/devguide/: coding_standard.md  index.rst  lua_bindings.md  py_bindings.rst  workflow.md
doc/framework/: doc_BooleanLogicalVolume.h  doc_ChiMPI.h  doc_FFI.h  doc_MeshGenerators.h  doc_PostProcessors.h  doc_RCCLogicalVolume.h  doc_SpatialDiscretization.h  doc_SurfaceMesher.h  doc_mesh_macros.h  mesh_maindoc_page.h
doc/install/: easy_install.rst  index.rst  install.rst  install_linux.rst  install_linux_easy.rst  install_macos_easy.rst
doc/modules/: modules_maindoc_page.h
doc/modules/LinearBoltzmannSolvers/: doc_A_SolverBases.h  doc_Ba_Groupsets.h  doc_Bb_bcs.h  doc_Bc_field_functions.h
doc/modules/PointReactorKinetics/: rpk_doc.h
doc/pyapi/: index.rst
doc/scripts/: lua2md.py
doc/source/: conf.py  index.rst  references.bib
doc/source/_static/: pyopensn.css
doc/source/_templates/: noinit.rst
doc/source/appendices/: index.rst  legendre_order_consistency.rst
doc/source/capi/: .gitkeep
doc/source/devguide/: coding_standard.rst  doxygen.rst  index.rst  py_bindings.rst
doc/source/gallery/: index.rst
doc/source/install/: build.rst  easy_install.rst  install.rst
doc/source/pyapi/: index.rst
doc/source/theory/: adjoint.rst  cross_sections.rst  index.rst  iterative.rst  parallelization.rst
doc/source/tutorials/: index.rst
doc/source/user_guide/: angular_quadratures.rst  basics.rst  boundary_conditions_sources.rst  discrete_ordinates_problems.rst  index.rst  iterative_best_practices.rst  iterative_methods.rst  materials_xs.rst  post_processing.rst  running_problems.rst  solvers.rst  troubleshooting.rst
doc/source/userguide/: basics.rst  boundary_conditions_sources.rst  cmfd_acceleration.rst  discrete_ordinates_problems.rst  example_problems.rst  faq.rst  geometry_mesh.rst  groupsets.rst  index.rst  installation.rst  iterative_best_practices.rst  iterative_methods.rst  materials_xs.rst  post_processors.rst  running_problems.rst  solvers.rst  troubleshooting.rst  visualization.rst
doc/theory/: adjoint.rst  background.rst  cross_sections.rst  discretization.rst  index.rst  introduction.rst  iterative.rst  outcome.rst  parallelization.rst
doc/tutorials/: index.rst
doc/tutorials/lbs/: index.rst
doc/tutorials/old/: index.rst  output.md
lua/: CMakeLists.txt  main.cc
lua/framework/: chi_lua.cc  lua.cc  lua.h  lua_app.cc  lua_app.h  lua_make_object.cc  lua_parse_table.cc  make_object.cc  parse_table.cc
lua/framework/console/: console.cc  console.h
lua/framework/exceptions/: invalid_lua_argument.cc  invalid_lua_argument.h
lua/framework/interfaces/: plugin.cc  plugin.h
lua/framework/logging/: chi_log_lua.h  log.cc  log.h  log_lua.h  lua_log.cc  lua_log.h
lua/framework/materials/: lua_material.cc  lua_material.h  material.cc  material.h
lua/framework/mesh/: lua_mesh_set_ids.cc  lua_mesh_set_ids.h  lua_mesh_set_property.cc  lua_mesh_set_property.h  mesh_compute_vol.cc  mesh_compute_vol.h  mesh_set_ids.cc  mesh_set_ids.h  mesh_set_mat_id_all.cc
lua/framework/mpi/: chi_mpi_lua.h  mpi_barrier.cc  mpi_barrier.h  mpi_lua.h
lua/framework/physics/: lua_material.cc  lua_material.h  physics_add_material.cc  physics_addmaterial.cc  physics_lua_utils.h  physics_material_properties.cc  (+1 more)
lua/lib/: aquad.cc  aquad.h  console.cc  console.h  enum.h  fieldfunc.cc  fieldfunc.h  functions.cc  functions.h  lbs.cc  lbs.h  logger.cc  logger.h  lua_app.cc  mat.cc  mat.h  mesh.cc  mesh.h  opensn.cc  parse_table.cc  parse_table.h  post.cc  post.h  solver.cc  solver.h  types.h  xs.cc  xs.h
lua/modules/: chi_modules_lua.cc  chi_modules_lua.h  modules.cc  modules_lua.cc  modules_lua.h
pyopensn/: CMakeLists.txt  py_env.cc  py_module.cc
pyopensn/src/: aquad.cpp  env.cpp  fieldfunc.cpp  logvol.cpp  main.cpp  mat.cpp  mesh.cpp  parameter.cpp  pyapi.hpp  solver.cpp  source.cpp  xs.cpp
python/: CMakeLists.txt  main.cc
python/lib/: aquad.cc  console.cc  console.h  context.cc  device.cu  diffusion.cc  fieldfunc.cc  functor.h  logvol.cc  material.cc  math.cc  mesh.cc  parameter.cc  post.cc  py_api.h  py_app.cc  py_app.h  py_env.h  py_wrappers.h  response.cc  settings.cc  solver.cc  source.cc  xs.cc
test/: CMakeLists.txt  run_tests
test/example/: example_test.cc  example_test.lua
test/exodusii_testing/: 3d_wedge_fuel.lua  fuel_cube.e  xs_fuel_g2.xs
test/lua/: CMakeLists.txt
test/python/: CMakeLists.txt
test/src/: checks.py  job_manager.py  jobmanager.py  main.cc  test_slot.py  unit_tester.cc  unit_tester.h
test/unit/: main.cc  mpi_env.cc  mpi_env.h  opensn_unit_test.cc  opensn_unit_test.h
tools/dependencies/: CMakeLists.txt  env_script.cmake
(+7448 files in other folders)
